Fix header alignment w/ addition of h2

--- a/style.css
+++ b/style.css
@@ -57,9 +57,25 @@ body {
     color: var(--secondary-color);
 }
 
-header, main, footer{
+header{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+main {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+footer {
+    padding: clamp(4px, 2vw, 20px);
+    color: var(--neutral2);
+    display: flex;
+    align-items: end;
+    flex-grow: 1;
 }
 
 #habits {
@@ -71,7 +87,13 @@ header, main, footer{
 #header__heading1 {
     font-weight: 700;
     font-size: 2rem;
-    padding: 10vh;
+    padding: clamp(4px, 5vh, 32px);
+}
+
+#header__intention {
+    font-size: 1.5rem;
+    padding: clamp(4px, 2vh, 16px);
+    font-weight: 500;
 }
 
 #addHabit {
@@ -89,18 +111,8 @@ header, main, footer{
     margin: clamp(4px, 1vw, 20px);
 }
 
-main {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-footer {
-    padding: clamp(4px, 2vw, 20px);
-    color: var(--neutral2);
-    display: flex;
-    align-items: end;
-    flex-grow: 1;
+.hidden {
+    display: none;
 }
 
 .habit > button {
